include/libmem/libmem.h

/* Constants */
#define LM_NULL    (0)
#define LM_PID_BAD ((lm_pid_t)-1) /* PID 0 is valid, so can't be used here. -1 could be valid, but it's unlikely */
#define LM_TID_BAD ((lm_tid_t)-1)
#define LM_ADDRESS_BAD ((lm_address_t)-1) /* Both 0 and -1 are a good idea here */
#define LM_PATH_MAX (4096) /* Fits up to 1024 4-byte UTF-8 characters */
#define LM_INST_MAX (16) /* Maximum size of a single instruction */
/* Primitive types */
typedef void     lm_void_t;
typedef enum {
	LM_FALSE = 0,
	LM_TRUE = 1
}  lm_bool_t;
typedef uint8_t   lm_byte_t;
typedef uintptr_t lm_address_t;
typedef size_t    lm_size_t;
/* String types */
typedef char             lm_char_t; /* UTF-8 encoded character */
typedef const lm_char_t *lm_string_t;
typedef const lm_byte_t *lm_bytearray_t;
/* OS primitive types */
typedef uint32_t lm_pid_t;
typedef uint32_t lm_tid_t;
typedef uint64_t lm_time_t;
/*
 * Memory protection flags
 *
 * lm_prot_t bit mask:
 *
 * 31 30 29 ... 2 1 0
 * 0  0  0      0 0 0
 *              W R X
 */
enum {
	LM_PROT_NONE = 0,

	LM_PROT_R = (1 << 0),
	LM_PROT_W = (1 << 1),
	LM_PROT_X = (1 << 2),

	LM_PROT_XR = LM_PROT_X | LM_PROT_R,
	LM_PROT_XW = LM_PROT_X | LM_PROT_W,
	LM_PROT_RW = LM_PROT_R | LM_PROT_W,
	LM_PROT_XRW = LM_PROT_X | LM_PROT_R | LM_PROT_W
};
typedef uint32_t lm_prot_t;
/* Supported asm/disasm architectures */
/*
 *  NOTE: The architectures listed here are the ones
 *        supported by both the assembler (keystone)
 *        and the disassembler (capstone), but not
 *        necessarily fully supported by libmem.
 */
enum {
	/* ARM */
	LM_ARCH_ARMV7 = 0, /* ARMv7 */
	LM_ARCH_ARMV8,     /* ARMv8 */
	LM_ARCH_THUMBV7,   /* ARMv7, thumb mode */
	LM_ARCH_THUMBV8,   /* ARMv8, thumb mode */

	LM_ARCH_ARMV7EB,   /* ARMv7, big endian */
	LM_ARCH_THUMBV7EB, /* ARMv7, big endian, thumb mode */
	LM_ARCH_ARMV8EB,   /* ARMv8, big endian */
	LM_ARCH_THUMBV8EB, /* ARMv8, big endian, thumb mode */

	LM_ARCH_AARCH64,   /* ARM64/AArch64 */

	/* MIPS */
	LM_ARCH_MIPS,     /* Mips32 */
	LM_ARCH_MIPS64,   /* Mips64 */
	LM_ARCH_MIPSEL,   /* Mips32, little endian */
	LM_ARCH_MIPSEL64, /* Mips64, little endian */

	/* X86 */
	LM_ARCH_X86_16, /* x86_16 */
	LM_ARCH_X86,    /* x86_32 */
	LM_ARCH_X64,    /* x86_64 */

	/* PowerPC */
	LM_ARCH_PPC32,   /* PowerPC 32 */
	LM_ARCH_PPC64,   /* PowerPC 64 */
	LM_ARCH_PPC64LE, /* PowerPC 64, little endian */

	/* SPARC */
	LM_ARCH_SPARC,   /* Sparc */
	LM_ARCH_SPARC64, /* Sparc64 */
	LM_ARCH_SPARCEL, /* Sparc, little endian */

	/* SystemZ */
	LM_ARCH_SYSZ, /* S390X */

	LM_ARCH_MAX,
};
typedef uint32_t lm_arch_t;
typedef struct lm_process_t {
	lm_pid_t  pid;
	lm_pid_t  ppid;
	lm_arch_t arch;
	lm_size_t bits;
	lm_time_t start_time; /* Process start timestamp, in milliseconds since last boot */
	lm_char_t path[LM_PATH_MAX];
	lm_char_t name[LM_PATH_MAX];
} lm_process_t;
typedef struct lm_thread_t {
	lm_tid_t tid;
	lm_pid_t owner_pid;
} lm_thread_t;
typedef struct lm_module_t {
	lm_address_t base;
	lm_address_t end;
	lm_size_t    size;
	lm_char_t    path[LM_PATH_MAX];
	lm_char_t    name[LM_PATH_MAX];
} lm_module_t;
/* An allocated segment of memory */
typedef struct lm_segment_t {
	lm_address_t base;
	lm_address_t end;
	lm_size_t    size;
	lm_prot_t    prot;
} lm_segment_t;
typedef struct lm_symbol_t {
	lm_string_t  name;
	lm_address_t address;
} lm_symbol_t;
typedef struct lm_inst_t {
	lm_address_t address;
	lm_size_t    size;
	lm_byte_t    bytes[LM_INST_MAX];
	lm_char_t    mnemonic[32];
	lm_char_t    op_str[160];
} lm_inst_t;
/*
 * API guidelines
 *
 * 1.  User facing functions should return when receiving bad parameters.
 *
 * 2.  Internal functions should 'assert' to check for bad parameters.
 *
 * 3.  Immutable struct pointers should be 'const'.
 *
 * 4.  Immutable strings should be 'lm_string_t'.
 *
 * 5.  Output variable pointers in functions should be at the end, unless
 *     it doesn't make sense to put it there (for example, when there is
 *     a size parameter after a mutable buffer).
 *
 * 6.  All user facing functions should have the 'LM_API' prefix for
 *     automatic importing and exporting.
 *
 * 7.  All user facing callables should have the 'LM_CALL' infix to ensure 
 *     that the calling convention for all callables is the same.
 *     This includes callbacks.
 *
 * 8.  Functions that run callbacks should have an 'lm_void_t *arg' argument
 *     so that the caller can pass values into the callback without globals
 *     or hacks.
 *
 * 9.  All user facing functions should have the 'LM_' prefix before their name,
 *     and after that, they should be PascalCase.
 *
 * 10. All user facing types should have the 'lm_' prefix before their name.
 *     After that, they should be snake_case, and also end with '_t'.
 *
 * 11. Exclusively output arguments in functions should have the '_out' suffix.
 */

/* Process API */

/**
 * Enumerates processes on a system and calls a callback function for each process found.
 * 
 * @param callback The callback function that will receive the current
 * process in the enumeration and an extra argument. This function
 * should return `LM_TRUE` to continue the enumeration, or `LM_FALSE`
 * to stop it.
 * @param arg The user-defined data structure that will be passed to the
 * callback function along with the `lm_process_t` structure.
 * 
 * @return `LM_TRUE` on success, or `LM_FALSE` on failure.
 */
LM_API lm_bool_t LM_CALL
LM_EnumProcesses(lm_bool_t (LM_CALL *callback)(lm_process_t *process,
					       lm_void_t    *arg),
		 lm_void_t          *arg);
/* Thread API */

/**
 * Enumerates threads in the current process and calls a callback
 * function for each thread found.
 * 
 * @param callback The callback function that will receive the current
 * thread in the enumeration and an extra argument. This function
 * should return `LM_TRUE` to continue the enumeration, or `LM_FALSE`
 * to stop it.
 * @param arg The user-defined data structure that will be passed to
 * the callback function `callback` during thread enumeration. This
 * allows you to pass additional information or context to the
 * callback function if needed.
 * 
 * @return The function `LM_EnumThreads` returns a boolean value of
 * type `lm_bool_t`, containing `LM_TRUE` if it succeeds, or
 * `LM_FALSE` if it fails.
 */
LM_API lm_bool_t LM_CALL
LM_EnumThreads(lm_bool_t (LM_CALL *callback)(lm_thread_t *thread,
					     lm_void_t   *arg),
	       lm_void_t          *arg);
/**
 * Enumerates threads of a given process and invokes a callback
 * function for each thread.
 * 
 * @param process The process you want to enumerate the threads from.
 * @param callback The callback function that will receive the current
 * thread in the enumeration and an extra argument. This function
 * should return `LM_TRUE` to continue the enumeration, or `LM_FALSE`
 * to stop it.
 * @param arg The user-defined data that can be passed to the callback
 * function. It allows you to provide additional information or
 * context to the callback function when iterating over threads in a
 * process.
 * 
 * @return The function `LM_EnumThreadsEx` returns a boolean value,
 * either `LM_TRUE` or `LM_FALSE`, depending on the success of the
 * operation.
 */
LM_API lm_bool_t LM_CALL
LM_EnumThreadsEx(const lm_process_t *process,
		 lm_bool_t (LM_CALL *callback)(lm_thread_t *thread,
					       lm_void_t   *arg),
		 lm_void_t          *arg);
/* Module API */

/**
 * Enumerates modules in the current process and calls a callback function
 * for each module found.
 * 
 * @param callback The callback function that will receive the current module in
 * the enumeration and an extra argument. This function should return `LM_TRUE`
 * to continue the enumeration, or `LM_FALSE` to stop it.
 * @param arg An extra argument that is passed to the callback function. This allows
 * you to provide additional information or context to the callback function when
 * it is invoked during the enumeration of modules.
 * 
 * @return Returns `LM_TRUE` if the enumeration succeeds, or `LM_FALSE` if it fails.
 */
LM_API lm_bool_t LM_CALL
LM_EnumModules(lm_bool_t (LM_CALL *callback)(lm_module_t *module,
					     lm_void_t   *arg),
	       lm_void_t          *arg);
/**
 * Enumerates modules in a specified process and calls a callback function
 * for each module found.
 * 
 * @param process The process that the modules will be enumerated from.
 * @param callback The callback function that will receive the current module in
 * the enumeration and an extra argument. This function should return `LM_TRUE`
 * to continue the enumeration, or `LM_FALSE` to stop it.
 * @param arg An extra argument that is passed to the callback function. This allows
 * you to provide additional information or context to the callback function when
 * it is invoked during the enumeration of modules.
 * 
 * @return Returns `LM_TRUE` if the enumeration succeeds, or `LM_FALSE` if it fails.
 */
LM_API lm_bool_t LM_CALL
LM_EnumModulesEx(const lm_process_t *process,
		 lm_bool_t (LM_CALL *callback)(lm_module_t *module,
					       lm_void_t   *arg),
		 lm_void_t          *arg);
/* Symbol API */

/**
 * Enumerates symbols in a module and calls a callback function for each symbol found.
 * 
 * @param module The module where the symbols will be enumerated from.
 * @param callback A function pointer that will receive each symbol in the enumeration and an extra argument.
 * The callback function should return `LM_TRUE` to continue the enumeration or `LM_FALSE` to stop it.
 * @param arg A pointer to user-defined data that can be passed to the callback function.
 * It allows you to provide additional information or context.
 * 
 * @return Returns `LM_TRUE` if the enumeration succeeds, `LM_FALSE` otherwise.
 */
LM_API lm_bool_t LM_CALL
LM_EnumSymbols(const lm_module_t  *module,
	       lm_bool_t (LM_CALL *callback)(lm_symbol_t *symbol,
					     lm_void_t   *arg),
	       lm_void_t          *arg);
/**
 * Enumerates symbols in a module with demangled names and calls a provided callback function for each
 * symbol found.
 *
 * @param module The module where the symbols will be enumerated from.
 * @param callback A function pointer that will receive each demangled symbol in the enumeration and
 * an extra argument. The callback function should return `LM_TRUE` to continue the enumeration or
 * `LM_FALSE` to stop it.
 * @param arg A pointer to user-defined data that can be passed to the callback function.
 * It allows you to provide additional information or context.
 * 
 * @return Returns `LM_TRUE` if the enumeration succeeds, `LM_FALSE` otherwise.
 */
LM_API lm_bool_t LM_CALL
LM_EnumSymbolsDemangled(const lm_module_t  *module,
			lm_bool_t (LM_CALL *callback)(lm_symbol_t *symbol,
						      lm_void_t   *arg),
			lm_void_t          *arg);
/* Segment API */

/**
 * Enumerates the memory segments of the current process and invokes a callback function for each segment.
 *
 * @param callback A function pointer that will receive each segment in the enumeration and an extra argument.
 * The callback function should return `LM_TRUE` to continue the enumeration or `LM_FALSE` to stop it.
 * @param arg A pointer to user-defined data that can be passed to the callback function.
 * It allows you to provide additional information or context to the callback function when iterating over segments.
 *
 * @return The function returns `LM_TRUE` if the enumeration was successful, or `LM_FALSE` otherwise.
 */
LM_API lm_bool_t LM_CALL
LM_EnumSegments(lm_bool_t (LM_CALL *callback)(lm_segment_t *segment,
                			      lm_void_t    *arg),
		lm_void_t          *arg);
/**
 * Enumerates the memory segments of a given process and invokes a callback function for each segment.
 *
 * @param process A pointer to a structure containing information about the process whose segments
 * will be enumerated.
 * @param callback A function pointer that will receive each segment in the enumeration and an extra argument.
 * The callback function should return `LM_TRUE` to continue the enumeration or `LM_FALSE` to stop it.
 * @param arg A pointer to user-defined data that can be passed to the callback function.
 * It allows you to provide additional information or context to the callback function when iterating over segments.
 *
 * @return The function returns `LM_TRUE` if the enumeration was successful, or `LM_FALSE` otherwise.
 */
LM_API lm_bool_t LM_CALL
LM_EnumSegmentsEx(const lm_process_t *process,
		  lm_bool_t (LM_CALL *callback)(lm_segment_t *segment,
						lm_void_t    *arg),
		  lm_void_t          *arg);