bindings/rust/libmem-sys/src/bindings.rs

/*
 *  ----------------------------------
 * |         libmem - by rdbo         |
 * |      Memory Hacking Library      |
 *  ----------------------------------
 */

/*
 * Copyright (C) 2024    Rdbo
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License version 3
 * as published by the Free Software Foundation.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

/* Generated by rust-bindgen 0.69.4, modified by rdbo */
#![allow(non_camel_case_types)]

pub type lm_void_t = ::std::os::raw::c_void;
pub type lm_bool_t = ::std::os::raw::c_uint;
pub type lm_byte_t = u8;
pub type lm_address_t = usize;
pub type lm_size_t = usize;
pub type lm_char_t = ::std::os::raw::c_char;
pub type lm_string_t = *const lm_char_t;
pub type lm_bytearray_t = *const lm_byte_t;
pub type lm_pid_t = u32;
pub type lm_tid_t = u32;
pub type lm_time_t = u64;
pub type lm_prot_t = u32;
pub type lm_arch_t = u32;

pub const LM_NULL: usize = 0;
pub const LM_PATH_MAX: usize = 4096;
pub const LM_INST_MAX: usize = 16;
pub const LM_FALSE: lm_bool_t = 0;
pub const LM_TRUE: lm_bool_t = 1;
pub const LM_PID_BAD: lm_pid_t = lm_pid_t::MAX;
pub const LM_TID_BAD: lm_tid_t = lm_tid_t::MAX;
pub const LM_ADDRESS_BAD: lm_address_t = lm_address_t::MAX;

pub const LM_PROT_NONE: lm_prot_t = 0;
pub const LM_PROT_R: lm_prot_t = 1;
pub const LM_PROT_W: lm_prot_t = 2;
pub const LM_PROT_X: lm_prot_t = 4;
pub const LM_PROT_XR: lm_prot_t = 5;
pub const LM_PROT_XW: lm_prot_t = 6;
pub const LM_PROT_RW: lm_prot_t = 3;
pub const LM_PROT_XRW: lm_prot_t = 7;

pub const LM_ARCH_ARM: lm_arch_t = 0;
pub const LM_ARCH_ARM64: lm_arch_t = 1;
pub const LM_ARCH_MIPS: lm_arch_t = 2;
pub const LM_ARCH_X86: lm_arch_t = 3;
pub const LM_ARCH_PPC: lm_arch_t = 4;
pub const LM_ARCH_SPARC: lm_arch_t = 5;
pub const LM_ARCH_SYSZ: lm_arch_t = 6;
pub const LM_ARCH_EVM: lm_arch_t = 7;
pub const LM_ARCH_MAX: lm_arch_t = 8;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lm_process_t {
    pub pid: lm_pid_t,
    pub ppid: lm_pid_t,
    pub bits: lm_size_t,
    pub start_time: lm_time_t,
    pub path: [lm_char_t; 4096usize],
    pub name: [lm_char_t; 4096usize],
}

#[test]
fn bindgen_test_layout_lm_process_t() {
    const UNINIT: ::std::mem::MaybeUninit<lm_process_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<lm_process_t>(),
        8216usize,
        concat!("Size of: ", stringify!(lm_process_t))
    );
    assert_eq!(
        ::std::mem::align_of::<lm_process_t>(),
        8usize,
        concat!("Alignment of ", stringify!(lm_process_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pid) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_process_t),
            "::",
            stringify!(pid)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ppid) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_process_t),
            "::",
            stringify!(ppid)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).bits) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_process_t),
            "::",
            stringify!(bits)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).start_time) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_process_t),
            "::",
            stringify!(start_time)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).path) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_process_t),
            "::",
            stringify!(path)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        4120usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_process_t),
            "::",
            stringify!(name)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lm_thread_t {
    pub tid: lm_tid_t,
    pub owner_pid: lm_pid_t,
}
#[test]
fn bindgen_test_layout_lm_thread_t() {
    const UNINIT: ::std::mem::MaybeUninit<lm_thread_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<lm_thread_t>(),
        8usize,
        concat!("Size of: ", stringify!(lm_thread_t))
    );
    assert_eq!(
        ::std::mem::align_of::<lm_thread_t>(),
        4usize,
        concat!("Alignment of ", stringify!(lm_thread_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).tid) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_thread_t),
            "::",
            stringify!(tid)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).owner_pid) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_thread_t),
            "::",
            stringify!(owner_pid)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lm_module_t {
    pub base: lm_address_t,
    pub end: lm_address_t,
    pub size: lm_size_t,
    pub path: [lm_char_t; 4096usize],
    pub name: [lm_char_t; 4096usize],
}
#[test]
fn bindgen_test_layout_lm_module_t() {
    const UNINIT: ::std::mem::MaybeUninit<lm_module_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<lm_module_t>(),
        8216usize,
        concat!("Size of: ", stringify!(lm_module_t))
    );
    assert_eq!(
        ::std::mem::align_of::<lm_module_t>(),
        8usize,
        concat!("Alignment of ", stringify!(lm_module_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).base) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_module_t),
            "::",
            stringify!(base)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).end) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_module_t),
            "::",
            stringify!(end)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).size) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_module_t),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).path) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_module_t),
            "::",
            stringify!(path)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        4120usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_module_t),
            "::",
            stringify!(name)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lm_segment_t {
    pub base: lm_address_t,
    pub end: lm_address_t,
    pub size: lm_size_t,
    pub prot: lm_prot_t,
}
#[test]
fn bindgen_test_layout_lm_segment_t() {
    const UNINIT: ::std::mem::MaybeUninit<lm_segment_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<lm_segment_t>(),
        32usize,
        concat!("Size of: ", stringify!(lm_segment_t))
    );
    assert_eq!(
        ::std::mem::align_of::<lm_segment_t>(),
        8usize,
        concat!("Alignment of ", stringify!(lm_segment_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).base) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_segment_t),
            "::",
            stringify!(base)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).end) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_segment_t),
            "::",
            stringify!(end)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).size) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_segment_t),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).prot) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_segment_t),
            "::",
            stringify!(prot)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lm_symbol_t {
    pub name: lm_string_t,
    pub address: lm_address_t,
}
#[test]
fn bindgen_test_layout_lm_symbol_t() {
    const UNINIT: ::std::mem::MaybeUninit<lm_symbol_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<lm_symbol_t>(),
        16usize,
        concat!("Size of: ", stringify!(lm_symbol_t))
    );
    assert_eq!(
        ::std::mem::align_of::<lm_symbol_t>(),
        8usize,
        concat!("Alignment of ", stringify!(lm_symbol_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_symbol_t),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).address) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_symbol_t),
            "::",
            stringify!(address)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lm_inst_t {
    pub address: lm_address_t,
    pub size: lm_size_t,
    pub bytes: [lm_byte_t; 16usize],
    pub mnemonic: [lm_char_t; 32usize],
    pub op_str: [lm_char_t; 160usize],
}
